@@ -1,13 +1,10 @@
 import importlib
-import warnings
 
 from asgiref.compatibility import guarantee_single_callable
 from django.conf import settings
 from django.core.exceptions import ImproperlyConfigured
 from django.urls.exceptions import Resolver404
 from django.urls.resolvers import URLResolver
-
-from channels.http import AsgiHandler
 
 """
 All Routing instances inside this file are also valid ASGI applications - with
@@ -59,9 +56,6 @@ class ProtocolTypeRouter:
 
     def __init__(self, application_mapping):
         self.application_mapping = application_mapping
-        if "http" not in self.application_mapping:
-            warnings.warn(DEPRECATION_MSG, DeprecationWarning, stacklevel=2)
-            self.application_mapping["http"] = AsgiHandler()
 
     async def __call__(self, scope, receive, send):
         if scope["type"] in self.application_mapping:
